// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error message components IncorrectContentType should match snapshot 1`] = `
<div>
  <div
    class="css-hvj582"
    data-test-id="incorrect-type"
  >
    <div
      class="Note__Note___2eSKN Note__Note--negative___3fkwL"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--medium___3Pezi Icon__Icon--negative___1dled"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
      </div>
      <div
        class="Note__Note__info___2m_-K"
      >
        <div
          class="Note__Note__title___2nwpx"
        >
          Extension "test-extension" cannot be assigned to this content type
        </div>
        <div
          class="Note__Note__content___H1pf-"
        >
          <div>
            <strong>
              Required:
            </strong>
             
            experimentTitle (Symbol), experimentId (Symbol), experimentKey (Symbol), meta (Object), variations (Array)
          </div>
          <div>
            <strong>
              Missing:
            </strong>
             
            key (symbol)
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`error message components MissingProjectId should match snapshot 1`] = `
<div>
  <div
    class="css-hvj582"
    data-test-id="missing-project"
  >
    <div
      class="Note__Note___2eSKN Note__Note--negative___3fkwL"
      data-test-id="cf-ui-note"
    >
      <div
        class="Note__Note__icon___20RqC"
      >
        <svg
          class="Icon__Icon___38Epv Icon__Icon--small___1yGZK Icon__Icon--negative___1dled"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
      </div>
      <div
        class="Note__Note__info___2m_-K"
      >
        <div
          class="Note__Note__content___H1pf-"
        >
          Please, set 
          <strong>
            Optimizely Project ID
          </strong>
           in Extension settings.
        </div>
      </div>
    </div>
  </div>
</div>
`;
